PyMaker/datas/object2/RawHTML/i12001/Python_DOC_referPages.how-to-compile-python-code-from-user-for-an-e-learning-game.txt
<div class="post-text" itemprop="text">
<p>I am thinking about building an e-learning game that takes the user's python code and compile it to see if the user wrote the right code or not. </p>
<p>I have no idea from where to start, I would just appreciate it if someone would point me out to the right direction.
Thanks in advance.</p>
</div>
<div class="post-text" itemprop="text">
<p>You can use the <code>py_compile</code> module for that. First, dump your code in a text file, for example:</p>
<pre><code>with open('test.py', 'w') as f:
  f.writelines('print("Hello World")')
</code></pre>
<p>Then, you can do the following to compile 'test.py':</p>
<pre><code>import py_compile
py_compile.compile('test.py')
</code></pre>
<p>If <code>test.py</code> has no error, <code>py_compile.compile</code> will succeed and generate a <code>.pyc</code> file called <code>test.pyc</code>. However, if <code>test.py</code> has some error, <code>py_compile.compile</code> will raise an exception, which you could handle and return to your user. For example, if you <code>test.py</code> has a missing <code>(</code> braket, <code>py_compile.compile</code> generated the following error for me:</p>
<pre><code>&gt;&gt;&gt; py_compile.compile('test.py')
  File "hello_world.py", line 1
    print "Hello World")
                   ^
SyntaxError: invalid syntax
</code></pre>
</div>
<span class="comment-copy">There is a built-in function called <a href="https://docs.python.org/3/library/functions.html#compile" rel="nofollow noreferrer">compile()</a>.</span>
<span class="comment-copy">Right off the mark</span>
<span class="comment-copy">Wow, that's a good answer :)</span>
